datax-rs/tui/src/bottom_pane/snapshots/datax_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_capped_command_details.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
assertion_line: 1264
expression: "render_lines(&view, 44)"
---

  PreToolUse hooks
  Interaction hooks on or off. Your change

  [x] Hook 1

  Event     PreToolUse
  Matcher   Bash
  Source    User config - /tmp/h.json
  Command   one two three four five six
            seven eight nine ten eleven
            twelve thirteen fourteen…
  Timeout   30s
  Trust     Trusted

  Press space or enter to toggle; esc to go
